feat:device api
