# routes/root.go
@@ -1,6 +1,7 @@
 package routes
 
 import (
+	"home-monitor-backend/models"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -8,8 +9,6 @@ import (
 
 func RootRoute(r *gin.Engine) {
 	r.GET("/", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{
-			"message": "Welcome to the Home Monitor API",
-		})
+		c.JSON(http.StatusOK, models.ResponseMessage{Message: "Welcome to Home Monitor API"})
 	})
 }
